20240524 Add classical benchmark models `ParticleNet` & `ParticleTransformer`

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import argparse\n",
+    "import math\n",
     "import time\n",
     "import yaml\n",
     "\n",
@@ -17,10 +17,13 @@
     "\n",
     "from source.data.preprocessing import FatJetEvents\n",
     "from source.data.datamodule import JetTorchDataModule, JetGraphDataModule\n",
-    "from source.models.qcgnn import QuantumRotQCGNN\n",
+    "from source.models.qcgnn import QuantumRotQCGNN, HybridQCGNN\n",
     "from source.models.mpgnn import ClassicalMPGNN\n",
+    "from source.models.part import ParticleTransformer\n",
+    "from source.models.pnet import ParticleNet\n",
     "from source.training.litmodel import TorchLightningModule, GraphLightningModel\n",
     "from source.training.loggers import csv_logger, wandb_logger\n",
+    "from source.training.result import plot_metrics\n",
     "\n",
     "with open('configs/config.yaml', 'r') as file:\n",
     "    config = yaml.safe_load(file)\n",
@@ -37,8 +40,13 @@
     "    \"\"\"Randomly create a data module.\"\"\"\n",
     "    \n",
     "    # Read jet data (reading is not affected by random seed).\n",
-    "    channels = ['VzToQCD', 'VzToZhToVevebb', 'VzToTt']\n",
-    "    events = [FatJetEvents(channel=channel, **config['Data']) for channel in channels]\n",
+    "    channels = ['VzToQCD', 'VzToZH', 'VzToTT']\n",
+    "    num_train = config['Data']['num_train']\n",
+    "    num_valid = config['Data']['num_valid']\n",
+    "    num_test = config['Data']['num_test']\n",
+    "    num_bins = config['Data']['num_bins']\n",
+    "    num_data_per_bin = math.ceil((num_train + num_valid + num_test) / num_bins)\n",
+    "    events = [FatJetEvents(channel=channel, num_data_per_bin=num_data_per_bin, **config['Data']) for channel in channels]\n",
     "    events = [_events.generate_uniform_pt_events() for _events in events]\n",
     "\n",
     "    # Turn into data module (for lightning training module).\n",
@@ -53,37 +61,30 @@
     "def create_training_info(model: nn.Module, model_description: str, model_hparams: dict, random_seed: int) -> dict:\n",
     "    \"\"\"Create a training information dictionary that will be recorded.\"\"\"\n",
     "\n",
-    "    # Hyperparameters and configurations that will be recorded.\n",
-    "    training_info = {}\n",
-    "    training_info.update(config['Settings'])\n",
-    "    training_info.update(config['Data'])\n",
-    "    training_info.update(config['Train'])\n",
-    "    training_info.update(config['Model'])\n",
-    "    training_info.update(model_hparams)\n",
-    "\n",
     "    # Data information.\n",
-    "    max_num_ptcs_per_jet = config['Data']['max_num_ptcs']\n",
-    "    num_data_per_channel = config['Data']['num_bins'] * config['Data']['num_data_per_bin']\n",
-    "    data_description = f\"Maxptc{max_num_ptcs_per_jet}_N{num_data_per_channel}\"\n",
+    "    data_description = f\"P{config['Data']['max_num_ptcs']}_N{config['Data']['num_train']}\"\n",
     "\n",
-    "    # Name of the model training.\n",
-    "    name = '-'.join([\n",
-    "        model.__class__.__name__,\n",
-    "        model_description,\n",
-    "        data_description,\n",
-    "        f\"{config['date']}_{random_seed}\",\n",
-    "    ])\n",
+    "    # The description used for grouping different result of random seeds.\n",
+    "    group_rnd = '-'.join([model.__class__.__name__, model_description, data_description])\n",
     "    \n",
-    "    # Suffix of the training.\n",
+    "    # Name for this particular training (including random seed).\n",
+    "    name = group_rnd\n",
     "    if config['Settings']['suffix'] != '':\n",
-    "        name = name + '-' + config['Settings']['suffix']\n",
+    "        name += '-' + config['Settings']['suffix']\n",
+    "    name += '-' + str(random_seed)\n",
     "\n",
-    "    training_info['model'] = model.__class__.__name__\n",
-    "    training_info['random_seed'] = random_seed\n",
-    "    training_info['model_description'] = model_description\n",
-    "    training_info['data_description'] = data_description\n",
-    "    training_info['name'] = name\n",
-    "    training_info['date'] = config['date']\n",
+    "    # Hyperparameters and configurations that will be recorded.\n",
+    "    training_info = config.copy()\n",
+    "    training_info.update(model_hparams)\n",
+    "    training_info.update({\n",
+    "        'model_description': model_description,\n",
+    "        'data_description': data_description,\n",
+    "        'group_rnd': group_rnd,\n",
+    "        'name': name,\n",
+    "        'date': config['date'],\n",
+    "        'model': model.__class__.__name__,\n",
+    "        'random_seed': random_seed,\n",
+    "    })\n",
     "\n",
     "    return training_info\n",
     "\n",
@@ -93,14 +94,15 @@
     "\n",
     "    # Optimizer.\n",
     "    lr = eval(config['Train']['lr'])\n",
-    "    optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+    "    optimizer = torch.optim.RAdam(model.parameters(), lr=lr)\n",
     "\n",
     "    # Create lightning model depends on graph or not.\n",
     "    score_dim = config['Model']['score_dim']\n",
+    "    print_log = config['Settings']['print_log']\n",
     "    if graph:\n",
-    "        return GraphLightningModel(model, optimizer=optimizer, score_dim=score_dim)\n",
+    "        return GraphLightningModel(model, optimizer=optimizer, score_dim=score_dim, print_log=print_log)\n",
     "    else:\n",
-    "        return TorchLightningModule(model, optimizer=optimizer, score_dim=score_dim)\n",
+    "        return TorchLightningModule(model, optimizer=optimizer, score_dim=score_dim, print_log=print_log)\n",
     "    \n",
     "\n",
     "def create_trainer(model: nn.Module, training_info: dict, accelerator: str) -> L.Trainer:\n",
@@ -111,16 +113,18 @@
     "        wandb.login()\n",
     "        logger = wandb_logger(training_info)\n",
     "        logger.watch(model)\n",
+    "        loggers = [logger, csv_logger(training_info)]\n",
     "    else:\n",
-    "        logger = csv_logger(training_info)\n",
+    "        loggers = csv_logger(training_info)\n",
     "    \n",
     "    # Return the lightning trainer.\n",
     "    return L.Trainer(\n",
-    "        logger=logger,\n",
+    "        logger=loggers,\n",
     "        accelerator=accelerator,\n",
     "        max_epochs=config['Train']['max_epochs'],\n",
     "        log_every_n_steps=config['Train']['log_every_n_steps'],\n",
-    "        num_sanity_val_steps=config['Train']['num_sanity_val_steps']\n",
+    "        num_sanity_val_steps=config['Train']['num_sanity_val_steps'],\n",
+    "        \n",
     "    )"
    ]
   },
@@ -144,16 +148,25 @@
     "    training_info = create_training_info(model, model_description, model_hparams, random_seed)\n",
     "    trainer = create_trainer(model, training_info, accelerator)\n",
     "    \n",
-    "    trainer.fit(lightning_model, datamodule=data_module)\n",
+    "    if config['Settings']['mode'] == '100':\n",
+    "        trainer.fit(lightning_model, train_dataloaders=data_module.train_dataloader())\n",
+    "    elif config['Settings']['mode'] == '110':\n",
+    "        trainer.fit(lightning_model, datamodule=data_module)\n",
+    "    elif config['Settings']['mode'] == '111':\n",
+    "        trainer.fit(lightning_model, datamodule=data_module)\n",
+    "        print('\\nTesting the model.\\n')\n",
+    "        trainer.test(lightning_model, datamodule=data_module)\n",
     "\n",
     "    # Finish wandb if used.\n",
     "    if config['Settings']['use_wandb']:\n",
     "        wandb.finish()\n",
     "\n",
-    "def train_qcgnn(random_seed: int, model_hparams: dict):\n",
+    "    return training_info['name']\n",
+    "\n",
+    "def train_quantum(random_seed: int, model_class: nn.Module, model_hparams: dict):\n",
     "\n",
     "    model_hparams.update(config['Model'])\n",
-    "    model = QuantumRotQCGNN(**model_hparams)\n",
+    "    model = model_class(**model_hparams)\n",
     "\n",
     "    num_ir_qubits = model_hparams['num_ir_qubits']\n",
     "    num_nr_qubits = model_hparams['num_nr_qubits']\n",
@@ -162,7 +175,9 @@
     "    model_description = f\"nI{num_ir_qubits}_nQ{num_nr_qubits}_l{num_layers}_r{num_reupload}\"\n",
     "\n",
     "    accelerator = 'cpu'\n",
-    "    train(model, model_description, model_hparams, random_seed, accelerator, graph=False)\n",
+    "    name = train(model, model_description, model_hparams, random_seed, accelerator, graph=False)\n",
+    "\n",
+    "    return name\n",
     "\n",
     "def train_mpgnn(random_seed: int, model_hparams: dict):\n",
     "    \n",
@@ -175,7 +190,20 @@
     "    model_description = f\"go{gnn_out}_gh{gnn_hidden}_gl{gnn_layers}\"\n",
     "\n",
     "    accelerator = 'gpu' if torch.cuda.is_available() else 'cpu'\n",
-    "    train(model, model_description, model_hparams, random_seed, accelerator, graph=True)"
+    "    name = train(model, model_description, model_hparams, random_seed, accelerator, graph=True)\n",
+    "    \n",
+    "    return name\n",
+    "\n",
+    "def train_benchmark(random_seed: int, model_class: nn.Module):\n",
+    "    with open('configs/benchmark.yaml', 'r') as file:\n",
+    "        hparams = yaml.safe_load(file)[model_class.__name__]\n",
+    "\n",
+    "    model = model_class(score_dim=config['Model']['score_dim'], parameters=hparams)\n",
+    "    \n",
+    "    accelerator = 'gpu' if torch.cuda.is_available() else 'cpu'\n",
+    "    name = train(model, model_class.__name__, hparams, random_seed, accelerator, graph=False)\n",
+    "    \n",
+    "    return name"
    ]
   },
   {
@@ -184,25 +212,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for random_seed in range(1):\n",
-    "    print('=' * 10 + f\"Random Seed {random_seed}\" + '-' * 10)\n",
+    "# name_list = []\n",
     "\n",
-    "    # MPGNN\n",
-    "    for gnn_dim in [3, 5, 7]:\n",
-    "        print(f\" * Train MPGNN {gnn_dim}.\")\n",
-    "        mpgnn_hparams = {'gnn_in': 6, 'gnn_out': gnn_dim, 'gnn_layers': 2, 'gnn_hidden': gnn_dim}\n",
-    "        train_mpgnn(random_seed=random_seed, model_hparams=mpgnn_hparams)\n",
+    "# for random_seed in range(3):\n",
+    "#     print('=' * 10 + f\"Random Seed {random_seed}\" + '-' * 10)\n",
     "\n",
-    "    # SUPER MPGNN\n",
-    "    print(f\" * Train MPGNN {1024}.\")\n",
-    "    mpgnn_hparams = {'gnn_in': 6, 'gnn_out': 1024, 'gnn_layers': 4, 'gnn_hidden': 1024}\n",
-    "    train_mpgnn(random_seed=random_seed, model_hparams=mpgnn_hparams)\n",
+    "#     # MPGNN\n",
+    "#     for gnn_dim in [3, 5, 7]:\n",
+    "#         print(f\" * Train MPGNN {gnn_dim}.\")\n",
+    "#         mpgnn_hparams = {'gnn_in': 6, 'gnn_out': gnn_dim, 'gnn_layers': 2, 'gnn_hidden': gnn_dim}\n",
+    "#         name = train_mpgnn(random_seed=random_seed, model_hparams=mpgnn_hparams)\n",
+    "#         name_list.append(name)\n",
     "\n",
-    "    # QCGNN\n",
-    "    for num_nr_qubits in [3, 5, 7]:\n",
-    "        print(f\" * Train QCGNN {num_nr_qubits}.\")\n",
-    "        qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits}\n",
-    "        train_qcgnn(random_seed=random_seed, model_hparams=qcgnn_hparams)"
+    "#     # Super MPGNN\n",
+    "#     print(f\" * Train MPGNN {256}.\")\n",
+    "#     mpgnn_hparams = {'gnn_in': 6, 'gnn_out': 1024, 'gnn_layers': 2, 'gnn_hidden': 1024}\n",
+    "#     name = train_mpgnn(random_seed=random_seed, model_hparams=mpgnn_hparams)\n",
+    "#     name_list.append(name)\n",
+    "\n",
+    "#     # Particle Transformer (without interaction).\n",
+    "#     print(f\" * Train Particle Transformer.\")\n",
+    "#     name = train_benchmark(random_seed=random_seed, model_class=ParticleTransformer)\n",
+    "#     name_list.append(name)\n",
+    "\n",
+    "#     # Particle Net.\n",
+    "#     print(f\" * Train Particle Net.\")\n",
+    "#     name = train_benchmark(random_seed=random_seed, model_class=ParticleNet)\n",
+    "#     name_list.append(name)\n",
+    "\n",
+    "#     # QCGNN\n",
+    "#     for num_nr_qubits in [3, 5, 7]:\n",
+    "#         print(f\" * Train QCGNN {num_nr_qubits}.\")\n",
+    "#         qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits}\n",
+    "#         name = train_quantum(random_seed=random_seed, model_class=QuantumRotQCGNN, model_hparams=qcgnn_hparams)\n",
+    "#         name_list.append(name)\n",
+    "    \n",
+    "#     # Hybrid\n",
+    "#     for num_nr_qubits in [3, 5, 7]:\n",
+    "#         print(f\" * Train Hybrid {num_nr_qubits}.\")\n",
+    "#         qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits}\n",
+    "#         name = train_quantum(random_seed=random_seed, model_class=HybridQCGNN, model_hparams=qcgnn_hparams)\n",
+    "#         name_list.append(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Super MPGNN\n",
+    "# print(f\" * Train MPGNN {1024}.\")\n",
+    "# mpgnn_hparams = {'gnn_in': 6, 'gnn_out': 1024, 'gnn_layers': 2, 'gnn_hidden': 1024}\n",
+    "# name = train_mpgnn(random_seed=0, model_hparams=mpgnn_hparams)\n",
+    "\n",
+    "# plot_metrics(name, num_classes=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Particle Transformer (without interaction).\n",
+    "# print(f\" * Train Particle Transformer.\")\n",
+    "# name = train_benchmark(random_seed=0, model_class=ParticleTransformer)\n",
+    "\n",
+    "# plot_metrics(name, num_classes=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Particle Net.\n",
+    "# print(f\" * Train Particle Net.\")\n",
+    "# name = train_benchmark(random_seed=0, model_class=ParticleNet)\n",
+    "\n",
+    "# plot_metrics(name, num_classes=3)"
    ]
   }
  ],
