20240529 ParT add interaction | PNet remove jit | JetNet & TopQCD public dataset

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,28 +6,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
+    "import argparse\n",
+    "import sys\n",
     "import time\n",
     "import yaml\n",
     "\n",
+    "import awkward as ak\n",
     "import lightning as L\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import wandb\n",
     "\n",
-    "from source.data.preprocessing import FatJetEvents\n",
     "from source.data.datamodule import JetTorchDataModule, JetGraphDataModule\n",
+    "from source.data.opendata import JetNetEvents, TopQuarkEvents\n",
     "from source.models.qcgnn import QuantumRotQCGNN, HybridQCGNN\n",
     "from source.models.mpgnn import ClassicalMPGNN\n",
     "from source.models.part import ParticleTransformer\n",
     "from source.models.pnet import ParticleNet\n",
     "from source.training.litmodel import TorchLightningModule, GraphLightningModel\n",
     "from source.training.loggers import csv_logger, wandb_logger\n",
-    "from source.training.result import plot_metrics\n",
-    "\n",
-    "with open('configs/config.yaml', 'r') as file:\n",
-    "    config = yaml.safe_load(file)\n",
-    "    config['date'] = time.strftime('%Y%m%d_%H%M%S', time.localtime())"
+    "from source.training.result import plot_metrics"
    ]
   },
   {
@@ -36,33 +34,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_data_module(graph: bool) -> L.LightningDataModule:\n",
+    "if 'ipykernel' in sys.argv[0]:\n",
+    "    # Jupyter notebook (.ipynb)\n",
+    "    # dataset = 'TopQCD'\n",
+    "    dataset = 'JetNet'\n",
+    "    random_seed = 42\n",
+    "\n",
+    "else:\n",
+    "    # Python script (.py)\n",
+    "    parser = argparse.ArgumentParser(description='Process some inputs.')\n",
+    "    parser.add_argument('--dataset', type=str, default=None, help='Dataset (default: None)')\n",
+    "    parser.add_argument('--random_seed', type=int, default=42, help='Random seed (default: 42)')\n",
+    "    parser_args = parser.parse_args()\n",
+    "\n",
+    "    dataset = parser_args.dataset\n",
+    "    random_seed = parser_args.random_seed\n",
+    "\n",
+    "with open(f\"configs/config.yaml\", 'r') as file:\n",
+    "    \n",
+    "    # Configuration of training.\n",
+    "    config = yaml.safe_load(file)\n",
+    "    config['date'] = time.strftime('%Y%m%d_%H%M%S', time.localtime())\n",
+    "    config['dataset'] = dataset\n",
+    "\n",
+    "    # Determine the dimension of the score.\n",
+    "    if config[dataset]['num_classes'] <= 2:\n",
+    "        # Will use `BCELossWithLogits`\n",
+    "        score_dim = 1\n",
+    "    else:\n",
+    "        # Will use `CrossEntropyLoss`\n",
+    "        score_dim = config[dataset]['num_classes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_data_module(graph: bool, pi_scale: bool = False) -> L.LightningDataModule:\n",
     "    \"\"\"Randomly create a data module.\"\"\"\n",
     "    \n",
     "    # Read jet data (reading is not affected by random seed).\n",
-    "    channels = ['VzToQCD', 'VzToZH', 'VzToTT']\n",
     "    num_train = config['Data']['num_train']\n",
     "    num_valid = config['Data']['num_valid']\n",
     "    num_test = config['Data']['num_test']\n",
-    "    num_bins = config['Data']['num_bins']\n",
-    "    num_data_per_bin = math.ceil((num_train + num_valid + num_test) / num_bins)\n",
-    "    events = [FatJetEvents(channel=channel, num_data_per_bin=num_data_per_bin, **config['Data']) for channel in channels]\n",
-    "    events = [_events.generate_uniform_pt_events() for _events in events]\n",
+    "    num_events = num_train + num_valid + num_test\n",
     "\n",
+    "    # Dataset settings.\n",
+    "    dataset_config = {}\n",
+    "    dataset_config.update(config['Data'])\n",
+    "    dataset_config.update(config[dataset])\n",
+    "\n",
+    "    # JetNet dataset (multi-class classification).\n",
+    "    if dataset == 'JetNet':\n",
+    "        channels = ['q', 'g', 't', 'w', 'z']\n",
+    "        events = [JetNetEvents(channel=channel, **dataset_config) for channel in channels]\n",
+    "        events = [_events.generate_events(num_events) for _events in events]\n",
+    "\n",
+    "    # Top quark tagging dataset (background light quark QCD).\n",
+    "    elif dataset == 'TopQCD':\n",
+    "        events = []\n",
+    "        for y, channel in enumerate(['Top', 'QCD']):\n",
+    "            events_train = TopQuarkEvents(mode='train', is_signal_new=y, **dataset_config).generate_events(num_train)\n",
+    "            events_valid = TopQuarkEvents(mode='valid', is_signal_new=y, **dataset_config).generate_events(num_valid)\n",
+    "            events_test  = TopQuarkEvents(mode='test',  is_signal_new=y, **dataset_config).generate_events(num_test)\n",
+    "            events.append(ak.concatenate([events_train, events_valid, events_test], axis=0))\n",
+    "    \n",
     "    # Turn into data module (for lightning training module).\n",
     "    if graph:\n",
-    "        data_module = JetGraphDataModule(events, **config['Data'])\n",
+    "        data_module = JetGraphDataModule(events, pi_scale=pi_scale, **dataset_config)\n",
     "    else:\n",
-    "        data_module = JetTorchDataModule(events, **config['Data'])\n",
+    "        data_module = JetTorchDataModule(events, **dataset_config)\n",
     "\n",
     "    return data_module\n",
     "\n",
     "\n",
-    "def create_training_info(model: nn.Module, model_description: str, model_hparams: dict, random_seed: int) -> dict:\n",
+    "def create_training_info(model: nn.Module, model_description: str, model_hparams: dict) -> dict:\n",
     "    \"\"\"Create a training information dictionary that will be recorded.\"\"\"\n",
     "\n",
     "    # Data information.\n",
-    "    data_description = f\"P{config['Data']['max_num_ptcs']}_N{config['Data']['num_train']}\"\n",
+    "    data_description = f\"{dataset}_P{config['Data']['max_num_ptcs']}_N{config['Data']['num_train']}\"\n",
     "\n",
     "    # The description used for grouping different result of random seeds.\n",
     "    group_rnd = '-'.join([model.__class__.__name__, model_description, data_description])\n",
@@ -77,13 +129,13 @@
     "    training_info = config.copy()\n",
     "    training_info.update(model_hparams)\n",
     "    training_info.update({\n",
-    "        'model_description': model_description,\n",
-    "        'data_description': data_description,\n",
-    "        'group_rnd': group_rnd,\n",
     "        'name': name,\n",
     "        'date': config['date'],\n",
     "        'model': model.__class__.__name__,\n",
+    "        'group_rnd': group_rnd,\n",
     "        'random_seed': random_seed,\n",
+    "        'data_description': data_description,\n",
+    "        'model_description': model_description,\n",
     "    })\n",
     "\n",
     "    return training_info\n",
@@ -97,8 +149,9 @@
     "    optimizer = torch.optim.RAdam(model.parameters(), lr=lr)\n",
     "\n",
     "    # Create lightning model depends on graph or not.\n",
-    "    score_dim = config['Model']['score_dim']\n",
     "    print_log = config['Settings']['print_log']\n",
+    "\n",
+    "    # Graph is for MPGNN.\n",
     "    if graph:\n",
     "        return GraphLightningModel(model, optimizer=optimizer, score_dim=score_dim, print_log=print_log)\n",
     "    else:\n",
@@ -136,25 +189,27 @@
    "source": [
     "def train(\n",
     "        model: nn.Module, model_description: str, model_hparams: dict,\n",
-    "        random_seed: int, accelerator: str, graph: bool,\n",
+    "        accelerator: str, graph: bool, pi_scale: bool = False,\n",
     "    ):\n",
     "    \n",
     "    # Fix all random stuff.\n",
     "    L.seed_everything(random_seed)\n",
     "\n",
     "    # Traditional training procedure.\n",
-    "    data_module = create_data_module(graph=graph)\n",
+    "    data_module = create_data_module(graph=graph, pi_scale=pi_scale)\n",
     "    lightning_model = create_lightning_model(model=model, graph=graph)\n",
-    "    training_info = create_training_info(model, model_description, model_hparams, random_seed)\n",
+    "    training_info = create_training_info(model, model_description, model_hparams)\n",
     "    trainer = create_trainer(model, training_info, accelerator)\n",
     "    \n",
-    "    if config['Settings']['mode'] == '100':\n",
-    "        trainer.fit(lightning_model, train_dataloaders=data_module.train_dataloader())\n",
-    "    elif config['Settings']['mode'] == '110':\n",
-    "        trainer.fit(lightning_model, datamodule=data_module)\n",
-    "    elif config['Settings']['mode'] == '111':\n",
-    "        trainer.fit(lightning_model, datamodule=data_module)\n",
-    "        print('\\nTesting the model.\\n')\n",
+    "    # Training and validation.\n",
+    "    if eval(config['Settings']['mode'][0]):\n",
+    "        if eval(config['Settings']['mode'][1]):\n",
+    "            trainer.fit(lightning_model, datamodule=data_module)\n",
+    "        else:\n",
+    "            trainer.fit(lightning_model, train_dataloaders=data_module.train_dataloader())\n",
+    "\n",
+    "    # Testing.\n",
+    "    if eval(config['Settings']['mode'][2]):\n",
     "        trainer.test(lightning_model, datamodule=data_module)\n",
     "\n",
     "    # Finish wandb if used.\n",
@@ -163,10 +218,9 @@
     "\n",
     "    return training_info['name']\n",
     "\n",
-    "def train_quantum(random_seed: int, model_class: nn.Module, model_hparams: dict):\n",
+    "def train_quantum(model_class: nn.Module, model_hparams: dict, pi_scale: bool):\n",
     "\n",
-    "    model_hparams.update(config['Model'])\n",
-    "    model = model_class(**model_hparams)\n",
+    "    model = model_class(score_dim=score_dim, **model_hparams)\n",
     "\n",
     "    num_ir_qubits = model_hparams['num_ir_qubits']\n",
     "    num_nr_qubits = model_hparams['num_nr_qubits']\n",
@@ -175,14 +229,13 @@
     "    model_description = f\"nI{num_ir_qubits}_nQ{num_nr_qubits}_l{num_layers}_r{num_reupload}\"\n",
     "\n",
     "    accelerator = 'cpu'\n",
-    "    name = train(model, model_description, model_hparams, random_seed, accelerator, graph=False)\n",
+    "    name = train(model, model_description, model_hparams, accelerator, graph=False, pi_scale=pi_scale)\n",
     "\n",
     "    return name\n",
     "\n",
-    "def train_mpgnn(random_seed: int, model_hparams: dict):\n",
+    "def train_mpgnn(model_hparams: dict):\n",
     "    \n",
-    "    model_hparams.update(config['Model'])\n",
-    "    model = ClassicalMPGNN(**model_hparams)\n",
+    "    model = ClassicalMPGNN(score_dim=score_dim, **model_hparams)\n",
     "\n",
     "    gnn_out = model_hparams['gnn_out']\n",
     "    gnn_hidden = model_hparams['gnn_hidden']\n",
@@ -190,18 +243,24 @@
     "    model_description = f\"go{gnn_out}_gh{gnn_hidden}_gl{gnn_layers}\"\n",
     "\n",
     "    accelerator = 'gpu' if torch.cuda.is_available() else 'cpu'\n",
-    "    name = train(model, model_description, model_hparams, random_seed, accelerator, graph=True)\n",
+    "    name = train(model, model_description, model_hparams, accelerator, graph=True)\n",
     "    \n",
     "    return name\n",
     "\n",
-    "def train_benchmark(random_seed: int, model_class: nn.Module):\n",
-    "    with open('configs/benchmark.yaml', 'r') as file:\n",
-    "        hparams = yaml.safe_load(file)[model_class.__name__]\n",
+    "def train_benchmark(model_class: nn.Module, lite: bool = False):\n",
+    "    if lite:\n",
+    "        with open('configs/benchmark_lite.yaml', 'r') as file:\n",
+    "            hparams = yaml.safe_load(file)[model_class.__name__]\n",
+    "            model_description = 'lite'\n",
+    "    else:\n",
+    "        with open('configs/benchmark.yaml', 'r') as file:\n",
+    "            hparams = yaml.safe_load(file)[model_class.__name__]\n",
+    "            model_description = ''\n",
     "\n",
-    "    model = model_class(score_dim=config['Model']['score_dim'], parameters=hparams)\n",
+    "    model = model_class(score_dim=score_dim, parameters=hparams)\n",
     "    \n",
     "    accelerator = 'gpu' if torch.cuda.is_available() else 'cpu'\n",
-    "    name = train(model, model_class.__name__, hparams, random_seed, accelerator, graph=False)\n",
+    "    name = train(model, model_description, hparams, accelerator, graph=False)\n",
     "    \n",
     "    return name"
    ]
@@ -212,47 +271,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# name_list = []\n",
-    "\n",
-    "# for random_seed in range(3):\n",
-    "#     print('=' * 10 + f\"Random Seed {random_seed}\" + '-' * 10)\n",
-    "\n",
-    "#     # MPGNN\n",
-    "#     for gnn_dim in [3, 5, 7]:\n",
-    "#         print(f\" * Train MPGNN {gnn_dim}.\")\n",
-    "#         mpgnn_hparams = {'gnn_in': 6, 'gnn_out': gnn_dim, 'gnn_layers': 2, 'gnn_hidden': gnn_dim}\n",
-    "#         name = train_mpgnn(random_seed=random_seed, model_hparams=mpgnn_hparams)\n",
-    "#         name_list.append(name)\n",
-    "\n",
-    "#     # Super MPGNN\n",
-    "#     print(f\" * Train MPGNN {256}.\")\n",
-    "#     mpgnn_hparams = {'gnn_in': 6, 'gnn_out': 1024, 'gnn_layers': 2, 'gnn_hidden': 1024}\n",
-    "#     name = train_mpgnn(random_seed=random_seed, model_hparams=mpgnn_hparams)\n",
-    "#     name_list.append(name)\n",
-    "\n",
-    "#     # Particle Transformer (without interaction).\n",
-    "#     print(f\" * Train Particle Transformer.\")\n",
-    "#     name = train_benchmark(random_seed=random_seed, model_class=ParticleTransformer)\n",
-    "#     name_list.append(name)\n",
-    "\n",
-    "#     # Particle Net.\n",
-    "#     print(f\" * Train Particle Net.\")\n",
-    "#     name = train_benchmark(random_seed=random_seed, model_class=ParticleNet)\n",
-    "#     name_list.append(name)\n",
-    "\n",
-    "#     # QCGNN\n",
-    "#     for num_nr_qubits in [3, 5, 7]:\n",
-    "#         print(f\" * Train QCGNN {num_nr_qubits}.\")\n",
-    "#         qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits}\n",
-    "#         name = train_quantum(random_seed=random_seed, model_class=QuantumRotQCGNN, model_hparams=qcgnn_hparams)\n",
-    "#         name_list.append(name)\n",
-    "    \n",
-    "#     # Hybrid\n",
-    "#     for num_nr_qubits in [3, 5, 7]:\n",
-    "#         print(f\" * Train Hybrid {num_nr_qubits}.\")\n",
-    "#         qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits}\n",
-    "#         name = train_quantum(random_seed=random_seed, model_class=HybridQCGNN, model_hparams=qcgnn_hparams)\n",
-    "#         name_list.append(name)"
+    "# # QCGNN\n",
+    "# for num_nr_qubits in [3, 5, 7]:\n",
+    "#     print(f\"\\n* Train QCGNN {num_nr_qubits}.\\n\")\n",
+    "#     qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits}\n",
+    "#     name = train_quantum(model_class=QuantumRotQCGNN, model_hparams=qcgnn_hparams, pi_scale=True)"
    ]
   },
   {
@@ -261,12 +284,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Super MPGNN\n",
-    "# print(f\" * Train MPGNN {1024}.\")\n",
-    "# mpgnn_hparams = {'gnn_in': 6, 'gnn_out': 1024, 'gnn_layers': 2, 'gnn_hidden': 1024}\n",
-    "# name = train_mpgnn(random_seed=0, model_hparams=mpgnn_hparams)\n",
+    "# # Hybrid\n",
+    "# for num_nr_qubits in [3, 5, 7]:\n",
+    "#     print(f\"\\n* Train Hybrid {num_nr_qubits}.\\n\")\n",
+    "#     qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits}\n",
+    "#     name = train_quantum(model_class=HybridQCGNN, model_hparams=qcgnn_hparams, pi_scale=False)dddddsdasdasdasdasd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # MPGNN\n",
     "\n",
-    "# plot_metrics(name, num_classes=3)"
+    "for gnn_dim in [3, 5, 7, 64]:\n",
+    "    print(f\"\\n* Train MPGNN {gnn_dim}.\\n\")\n",
+    "    mpgnn_hparams = {'gnn_in': 6, 'gnn_out': gnn_dim, 'gnn_layers': 2, 'gnn_hidden': gnn_dim}\n",
+    "    name = train_mpgnn(model_hparams=mpgnn_hparams)"
    ]
   },
   {
@@ -276,10 +312,10 @@
    "outputs": [],
    "source": [
     "# # Particle Transformer (without interaction).\n",
-    "# print(f\" * Train Particle Transformer.\")\n",
-    "# name = train_benchmark(random_seed=0, model_class=ParticleTransformer)\n",
     "\n",
-    "# plot_metrics(name, num_classes=3)"
+    "print(f\"\\n* Train Particle Transformer.\\n\")\n",
+    "name = train_benchmark(model_class=ParticleTransformer, lite=False)\n",
+    "name = train_benchmark(model_class=ParticleTransformer, lite=True)"
    ]
   },
   {
@@ -288,11 +324,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Particle Net.\n",
-    "# print(f\" * Train Particle Net.\")\n",
-    "# name = train_benchmark(random_seed=0, model_class=ParticleNet)\n",
+    "# Particle Net.\n",
     "\n",
-    "# plot_metrics(name, num_classes=3)"
+    "print(f\"\\n* Train Particle Net.\\n\")\n",
+    "name = train_benchmark(model_class=ParticleNet, lite=False)\n",
+    "name = train_benchmark(model_class=ParticleNet, lite=True)"
    ]
   }
  ],
