20240530 Change `MPGNN` to `PFN` | Add model description to README

--- a/main.ipynb
+++ b/main.ipynb
@@ -19,10 +19,10 @@
     "\n",
     "from source.data.datamodule import JetTorchDataModule, JetGraphDataModule\n",
     "from source.data.opendata import JetNetEvents, TopQuarkEvents\n",
-    "from source.models.qcgnn import QuantumRotQCGNN, HybridQCGNN\n",
-    "from source.models.mpgnn import ClassicalMPGNN\n",
     "from source.models.part import ParticleTransformer\n",
+    "from source.models.pfn import ParticleFlowNetwork\n",
     "from source.models.pnet import ParticleNet\n",
+    "from source.models.qcgnn import QuantumRotQCGNN, HybridQCGNN\n",
     "from source.training.litmodel import TorchLightningModule, GraphLightningModel\n",
     "from source.training.loggers import csv_logger, wandb_logger\n",
     "from source.training.result import plot_metrics"
@@ -151,7 +151,7 @@
     "    # Create lightning model depends on graph or not.\n",
     "    print_log = config['Settings']['print_log']\n",
     "\n",
-    "    # Graph is for MPGNN.\n",
+    "    # Graph is for PFN.\n",
     "    if graph:\n",
     "        return GraphLightningModel(model, optimizer=optimizer, score_dim=score_dim, print_log=print_log)\n",
     "    else:\n",
@@ -226,21 +226,23 @@
     "    num_nr_qubits = model_hparams['num_nr_qubits']\n",
     "    num_layers = model_hparams['num_layers']\n",
     "    num_reupload = model_hparams['num_reupload']\n",
-    "    model_description = f\"nI{num_ir_qubits}_nQ{num_nr_qubits}_l{num_layers}_r{num_reupload}\"\n",
+    "    dropout = model_hparams['dropout']\n",
+    "    model_description = f\"nI{num_ir_qubits}_nQ{num_nr_qubits}_L{num_layers}_R{num_reupload}_D{dropout:.2f}\"\n",
     "\n",
     "    accelerator = 'cpu'\n",
     "    name = train(model, model_description, model_hparams, accelerator, graph=False, pi_scale=pi_scale)\n",
     "\n",
     "    return name\n",
     "\n",
-    "def train_mpgnn(model_hparams: dict):\n",
+    "def train_pfn(model_hparams: dict):\n",
     "    \n",
-    "    model = ClassicalMPGNN(score_dim=score_dim, **model_hparams)\n",
+    "    model = ParticleFlowNetwork(score_dim=score_dim, **model_hparams)\n",
     "\n",
-    "    gnn_out = model_hparams['gnn_out']\n",
-    "    gnn_hidden = model_hparams['gnn_hidden']\n",
-    "    gnn_layers = model_hparams['gnn_layers']\n",
-    "    model_description = f\"go{gnn_out}_gh{gnn_hidden}_gl{gnn_layers}\"\n",
+    "    phi_out = model_hparams['phi_out']\n",
+    "    phi_hidden = model_hparams['phi_hidden']\n",
+    "    phi_layers = model_hparams['phi_layers']\n",
+    "    dropout = model_hparams['dropout']\n",
+    "    model_description = f\"O{phi_out}_H{phi_hidden}_L{phi_layers}_D{dropout:.2f}\"\n",
     "\n",
     "    accelerator = 'gpu' if torch.cuda.is_available() else 'cpu'\n",
     "    name = train(model, model_description, model_hparams, accelerator, graph=True)\n",
@@ -274,7 +276,7 @@
     "# # QCGNN\n",
     "# for num_nr_qubits in [3, 5, 7]:\n",
     "#     print(f\"\\n* Train QCGNN {num_nr_qubits}.\\n\")\n",
-    "#     qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits}\n",
+    "#     qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits, 'dropout': 0.0}\n",
     "#     name = train_quantum(model_class=QuantumRotQCGNN, model_hparams=qcgnn_hparams, pi_scale=True)"
    ]
   },
@@ -287,7 +289,7 @@
     "# # Hybrid\n",
     "# for num_nr_qubits in [3, 5, 7]:\n",
     "#     print(f\"\\n* Train Hybrid {num_nr_qubits}.\\n\")\n",
-    "#     qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits}\n",
+    "#     qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits, 'dropout': 0.0}\n",
     "#     name = train_quantum(model_class=HybridQCGNN, model_hparams=qcgnn_hparams, pi_scale=False)dddddsdasdasdasdasd"
    ]
   },
@@ -297,12 +299,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # MPGNN\n",
+    "# # Particle Flow Network.\n",
     "\n",
-    "for gnn_dim in [3, 5, 7, 64]:\n",
-    "    print(f\"\\n* Train MPGNN {gnn_dim}.\\n\")\n",
-    "    mpgnn_hparams = {'gnn_in': 6, 'gnn_out': gnn_dim, 'gnn_layers': 2, 'gnn_hidden': gnn_dim}\n",
-    "    name = train_mpgnn(model_hparams=mpgnn_hparams)"
+    "for phi_dim in [3, 5, 7, 64]:\n",
+    "    print(f\"\\n* Train PFN {phi_dim}.\\n\")\n",
+    "    pfn_hparams = {'phi_in': 6, 'phi_out': phi_dim, 'phi_layers': 2, 'phi_hidden': phi_dim, 'dropout': 0.0}\n",
+    "    name = train_pfn(model_hparams=pfn_hparams)"
    ]
   },
   {
@@ -311,11 +313,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Particle Transformer (without interaction).\n",
+    "# # # Particle Transformer.\n",
     "\n",
-    "print(f\"\\n* Train Particle Transformer.\\n\")\n",
-    "name = train_benchmark(model_class=ParticleTransformer, lite=False)\n",
-    "name = train_benchmark(model_class=ParticleTransformer, lite=True)"
+    "# print(f\"\\n* Train Particle Transformer.\\n\")\n",
+    "# name = train_benchmark(model_class=ParticleTransformer, lite=False)\n",
+    "# name = train_benchmark(model_class=ParticleTransformer, lite=True)"
    ]
   },
   {
@@ -324,11 +326,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Particle Net.\n",
+    "# # Particle Net.\n",
     "\n",
-    "print(f\"\\n* Train Particle Net.\\n\")\n",
-    "name = train_benchmark(model_class=ParticleNet, lite=False)\n",
-    "name = train_benchmark(model_class=ParticleNet, lite=True)"
+    "# print(f\"\\n* Train Particle Net.\\n\")\n",
+    "# name = train_benchmark(model_class=ParticleNet, lite=False)\n",
+    "# name = train_benchmark(model_class=ParticleNet, lite=True)"
    ]
   }
  ],
